<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent"
        android:weightSum="1.0"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBlue"
            android:layout_weight="0.7">
        </LinearLayout>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/onGoing"
            android:text="@string/numberZero"
            android:layout_gravity="bottom"
            android:maxLength="16"
            android:background="@color/colorDarkBlue"
            android:textAlignment="textEnd"
            android:layout_above="@id/enterData"
            android:textSize="50dp" android:gravity="end" />
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enterData"
            android:text="@string/numberZero"
            android:background="@color/colorDarkBlue"
            android:textAlignment="textEnd"
            android:textSize="@dimen/twenty_five_sp"
            android:gravity="end" />
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_for_reason"
            android:background="@color/colorDarkBlue"
            android:textColor="@color/colorDarkBlue" />
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:id="@+id/up"
            android:layout_weight="0.06">
            <Button  android:id="@+id/she"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorCancelBackground"
                android:text="@string/c"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/plusminus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorDarkWhite"
                android:text="@string/plus_minus"
                android:layout_weight="0.25"
                android:textColor="@color/colorDarkBlue"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorDarkWhite"
                android:text="@string/percentage"
                android:layout_weight="0.25"
                android:textColor="@color/colorDarkBlue"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorDarkWhite"
                android:text="@string/divide"
                android:id="@+id/divide"
                android:layout_weight="0.25"
                android:textColor="@color/colorDarkBlue"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_weight="0.06">
            <Button android:id="@+id/num7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberSeven"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/num8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberEight"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/num9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberNine"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/multiple"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorDarkWhite"
                android:text="@string/multiple"
                android:layout_weight="0.25"
                android:textColor="@color/colorDarkBlue"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_weight="0.06">
            <Button android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberFour"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/num5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberFive"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/num6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberSix"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorDarkWhite"
                android:text="@string/subtract"
                android:layout_weight="0.25"
                android:textColor="@color/colorDarkBlue"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:layout_weight="0.06"
            android:orientation="horizontal">
            <Button android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberOne"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberTwo"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberThree"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorDarkWhite"
                android:text="@string/plus"
                android:layout_weight="0.25"
                android:textColor="@color/colorDarkBlue"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_weight="0.06">
            <Button android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/numberZero"
                android:layout_weight="0.25"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/decimal"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="@string/decimal"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp"
                android:textStyle="bold" />
            <Button android:id="@+id/back"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/f6f8ff"
                android:text="⌫"
                android:textColor="@color/colorDarkBlue"
                android:foregroundGravity="center"
                android:textSize="@dimen/sixty_sp" />
            <Button android:id="@+id/equalTo"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorEqual"
                android:foregroundGravity="center"
                android:text="="
                android:textColor="@color/colorDarkBlue"
                android:textSize="@dimen/sixty_sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>